# compete-defender-script

./: .gitignore  Makefile  PRICING_REFERENCE.md  README.md  curl-list.sh  pyproject.toml
src/defender_savings/: __main__.py  cli.py  config.py
src/defender_savings/api/: client.py  defender.py  resources.py
src/defender_savings/models/: __init__.py  defender.py  resources.py
src/defender_savings/output/: table.py
src/defender_savings/services/: calculator.py  mapper.py
tests/: conftest.py  test_aggregate_by_module.py  test_calculator.py  test_mapper.py
tests/models/: test_defender.py  test_resources.py
