[project]
name = "defender-savings"
version = "0.1.0"
description = "Microsoft Defender for Cloud cost estimator and savings calculator"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "pydantic>=2.10",
    "requests>=2.32",
]

[project.scripts]
defender-savings = "defender_savings.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/defender_savings"]
